--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,42 @@
+# Specifies intentionally untracked files to ignore when using Git
+# http://git-scm.com/docs/gitignore
 
 .idea/workspace.xml
 .idea/vcs.xml
 .idea/modules.xml
 .idea/misc.xml
+
+*~
+*.sw[mnpcod]
+*.log
+*.tmp
+*.tmp.*
+log.txt
+*.sublime-project
+*.sublime-workspace
+.vscode/
+npm-debug.log*
+
+.idea/
+.sourcemaps/
+.sass-cache/
+.tmp/
+.versions/
+coverage/
+dist/
+node_modules/
+tmp/
+temp/
+hooks/
+platforms/
+plugins/
+plugins/android.json
+plugins/ios.json
+www/
+$RECYCLE.BIN/
+
+www/lib
+
+.DS_Store
+Thumbs.db
+UserInterfaceState.xcuserstate
